--- a/index.html
+++ b/index.html
@@ -2,92 +2,39 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Full Name - Personal Portfolio</title>
+    <title>Enhanced HTML Page</title>
 </head>
 
 <body>
-    <!-- Header Section -->
     <header>
-        <h1>My Full Name</h1>
-        <p>Professional Tagline or Statement goes here</p>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
     </header>
+    <main>
+        <article>
+            <h1>Main Title of the Page</h1>
+            <h2>Subheading Level 2</h2>
+            <h3>Subheading Level 3</h3>
 
-    <!-- Navigation Section -->
-    <nav>
-        <ul>
-            <li><a href="#introduction">Introduction</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#about">About Me</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
+            <p>This is the first paragraph of the page, introducing the content.</p>
+            <p>Here is the second paragraph with additional information.</p>
+            <p>The third paragraph continues the discussion with more details.</p>
+            <p>Finally, the fourth paragraph concludes the topic.</p>
 
-    <!-- Introduction Section -->
-    <section id="introduction">
-        <h2>Introduction</h2>
-        <p>
-            Brief introduction about myself. This could include my professional background, interests, and
-            goals.
-        </p>
-    </section>
-
-    <!-- Projects Section -->
-    <section id="projects">
-        <h2>Projects</h2>
-
-        <!-- Project 1 -->
-        <article class="project">
-            <h3>Project Title 1</h3>
-            <p>Description of the project goes here. This can include the technologies used and the impact of the
-                project.</p>
-            <a href="https://link-to-project-1.com" target="_blank">View Project</a>
+            <a href="https://www.example.com" target="_blank">
+                <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Clickable Image">
+            </a>
         </article>
-
-        <!-- Project 2 -->
-        <article class="project">
-            <h3>Project Title 2</h3>
-            <p>Description of the project goes here. This can include the technologies used and the impact of the
-                project.</p>
-            <a href="https://link-to-project-2.com" target="_blank">View Project</a>
-        </article>
-
-        <!-- Project 3 -->
-        <article class="project">
-            <h3>Project Title 3</h3>
-            <p>Description of the project goes here. This can include the technologies used and the impact of the
-                project.</p>
-            <a href="https://link-to-project-3.com" target="_blank">View Project</a>
-        </article>
-    </section>
-
-    <!-- About Me Section -->
-    <section id="about">
-        <h2>About Me</h2>
-        <p> a brief summary of your background, hobbies, and skills. You can also list your professional skills or
-            relevant experience here.</p>
-        <ul>
-            <li>Skill 1</li>
-            <li>Skill 2</li>
-            <li>Skill 3</li>
-        </ul>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>You can reach me via email at <a href="mailto:my.email@example.com"></a></p>
-        <p>
-            Connect with me on:
-            <a href="https://www.linkedin.com/in/your-profile" target="_blank">LinkedIn</a> |
-            <a href="https://github.com/your-username" target="_blank">GitHub</a>
-        </p>
-    </section>
-
-    <!-- Footer Section -->
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
     <footer>
-        <p>&copy; 2024 My Full Name</p>
+        <p>Made by YOUR NAME - <a href="https://www.example.com" target="_blank">here</a>.</p>
     </footer>
 </body>
 
