--- a/tweets.html
+++ b/tweets.html
@@ -3,23 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enhanced HTML Page</title>
+    <title>Tweets Page</title>
 </head>
 <body>
-    <h1>Main Title of the Page</h1>
-    <h2>Subheading Level 2</h2>
-    <h3>Subheading Level 3</h3>
-
-    <p>This is the first paragraph of the page, introducing the content.</p>
-    <p>Here is the second paragraph with additional information.</p>
-    <p>The third paragraph continues the discussion with more details.</p>
-    <p>Finally, the fourth paragraph concludes the topic.</p>
-
-    <a href="https://www.example.com" target="_blank">
-        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Clickable Image">
-    </a>
-
-    <!-- Link to Tweets Page -->
-    <p><a href="tweets.html">View my tweets</a></p>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
+    <main>
+        <article>
+            <!-- Embedded Tweet -->
+            <blockquote class="twitter-tweet">
+                <p lang="en" dir="ltr">Learning to code is a journey worth taking! 🚀 <a href="https://twitter.com/hashtag/CodeNewbie?src=hash&amp;ref_src=twsrc%5Etfw">#CodeNewbie</a></p>
+                &mdash; Developer Inspiration (@DevInspiration) <a href="https://twitter.com/DevInspiration/status/1234567890?ref_src=twsrc%5Etfw">January 1, 2023</a>
+            </blockquote>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </article>
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
+    <footer>
+        <p>Made by YOUR NAME - <a href="https://www.example.com" target="_blank">here</a>.</p>
+    </footer>
 </body>
 </html>
+
