--- a/base_index.html
+++ b/base_index.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enhanced HTML Page</title>
+    <title>Base Index Page</title>
 </head>
+
 <body>
-    <h1>Main Title of the Page</h1>
-    <h2>Subheading Level 2</h2>
-    <h3>Subheading Level 3</h3>
-
-    <p>This is the first paragraph of the page, introducing the content.</p>
-    <p>Here is the second paragraph with additional information.</p>
-    <p>The third paragraph continues the discussion with more details.</p>
-    <p>Finally, the fourth paragraph concludes the topic.</p>
-
-    <a href="https://www.example.com" target="_blank">
-        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Clickable Image">
-    </a>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
+    <main>
+        <article>
+            <!-- Placeholder content for the base index -->
+            <p>Welcome to the base index page. Content will be added here later.</p>
+        </article>
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
+    <footer>
+        <p>Made by YOUR NAME - <a href="https://www.example.com" target="_blank">here</a>.</p>
+    </footer>
 </body>
+
 </html>
