updated all .html format

--- a/tweets.html
+++ b/tweets.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tweets Page</title>
 </head>
+
 <body>
     <header>
         <ul>
@@ -16,8 +18,11 @@
         <article>
             <!-- Embedded Tweet -->
             <blockquote class="twitter-tweet">
-                <p lang="en" dir="ltr">Learning to code is a journey worth taking! 🚀 <a href="https://twitter.com/hashtag/CodeNewbie?src=hash&amp;ref_src=twsrc%5Etfw">#CodeNewbie</a></p>
-                &mdash; Developer Inspiration (@DevInspiration) <a href="https://twitter.com/DevInspiration/status/1234567890?ref_src=twsrc%5Etfw">January 1, 2023</a>
+                <p lang="en" dir="ltr">Learning to code is a journey worth taking! 🚀 <a
+                        href="https://twitter.com/hashtag/CodeNewbie?src=hash&amp;ref_src=twsrc%5Etfw">#CodeNewbie</a>
+                </p>
+                &mdash; Developer Inspiration (@DevInspiration) <a
+                    href="https://twitter.com/DevInspiration/status/1234567890?ref_src=twsrc%5Etfw">January 1, 2023</a>
             </blockquote>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </article>
@@ -29,5 +34,5 @@
         <p>Made by YOUR NAME - <a href="https://www.example.com" target="_blank">here</a>.</p>
     </footer>
 </body>
-</html>
 
+</html>
