--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enhanced HTML Page</title>
 </head>
+
 <body>
     <header>
         <ul>
@@ -24,6 +26,39 @@
             <a href="https://www.example.com" target="_blank">
                 <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Clickable Image">
             </a>
+
+            <!-- Table of learners -->
+            <table>
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Age</th>
+                        <th>Country</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>John</td>
+                        <td>25</td>
+                        <td>USA</td>
+                    </tr>
+                    <tr>
+                        <td>Emily</td>
+                        <td>28</td>
+                        <td>Canada</td>
+                    </tr>
+                    <tr>
+                        <td>Michael</td>
+                        <td>32</td>
+                        <td>Australia</td>
+                    </tr>
+                    <tr>
+                        <td>Sophia</td>
+                        <td>21</td>
+                        <td>UK</td>
+                    </tr>
+                </tbody>
+            </table>
         </article>
         <aside>
             <p>placeholder to add comment thread later</p>
@@ -33,4 +68,5 @@
         <p>Made by YOUR NAME - <a href="https://www.example.com" target="_blank">here</a>.</p>
     </footer>
 </body>
+
 </html>
